[package]
name = "QuickDice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "3.0.0-beta.2"
rand_seeder = "0.2"
rand_pcg = "0.3"
# youchoose = "0.1"
# youchoose = { path = "./youchoose" }
strum = { version = "0.21", features = ["derive"] }
tui = "0.16"
termion = "1.5"