[package]
name = "seeded-dice-roller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "3.0.0-beta.2"
rand_seeder = "0.2"
rand_pcg = "0.3"
strum = { version = "0.21", features = ["derive"] }
# tui = "0.16"
# termion = "1.5"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
regex = "1"
lazy_static = "1.4.0"

[patch.crates-io]
rand_pcg = { git = "https://github.com/PanopticaRising/rand", branch = "expose-internal-state" }
rand_core = { git = "https://github.com/PanopticaRising/rand", branch = "expose-internal-state" }
